# Dharma

./: .env.example  .flake8  .gitignore  DEPLOYMENT_SUMMARY.md  For my reference.txt  INVENTORY.md  Makefile  README.md  SNIPED_IMPLEMENTATION_PLAN.md  TODO.md  WARP.md  changes.diff  codex_maintenance.sh  deployment.md  docker-compose.yml  grafana_dashboard.json  implementation_plan.md  package-lock.json  package.json  pyproject.toml  requirements.txt  settings.json  setup.sh  setup_codex.sh  turbo.json
.clinerules/: cline_rules.md
.codacy/: cli.sh  codacy.yaml
.devcontainer/: devcontainer.json
.github/workflows/: backend-python.yml  ci-cd.yml  ci.yml  frontend-ci.yml  python-package.yml
backend/: Dockerfile  alembic.ini  alembic.ini.bak  main.py  models.py  requirements.txt  seed.py  start.sh
backend/alembic/: env.py
backend/api/: __init__.py  analytics.py  auth.py  hyperlocal.py  posts.py  releases.py  subscriptions.py  uploads.py  users.py
backend/core/: database.py  feed.py  laces.py  locations.py  performance.py  redis_client.py  s3.py  security.py
backend/models/: __init__.py  intelligence_post.py  laces.py  like.py  (+9 more)
frontend/: .eslintrc.json  .gitignore  Dockerfile  Dockerfile.yml  index.html  index.tsx  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts  vite.config.ts  vitest.config.ts
modelsrv/: server.py
scripts/: bootstrap_envs.sh
services/: __init__.py
snpd.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
worker/: Dockerfile  celerybeat-schedule  celeryconfig.py  requirements.txt  tasks.py
(+101 files in other folders)
