[project]
name = "snpd"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["frontend","infra"]

[tool.ruff.lint]
select = ["E","F","I","B","UP","SIM","N","S","ASYNC","Q"]
ignore = ["E203"]  # black compatibility

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["services","worker","tests"]